Update CSS to prevent zooming on input focus on iOS.

--- a/client/src/pages/DeckEditor/DeckEditor.scss
+++ b/client/src/pages/DeckEditor/DeckEditor.scss
@@ -33,11 +33,10 @@
     }
 
     &-visibility {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         min-width: 15rem;
 
         @media only screen and (max-width: 52.125em) {
-            font-size: 1.4rem;
             padding: 0.75rem 3rem 0.75rem 0.75rem;
         }
     }
@@ -48,7 +47,7 @@
     }
 
     &-deckName {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         padding: 1rem 0.75rem;
         min-height: 3rem;
 
