--- a/client/src/pages/ForgotPassword/ForgotPassword.scss
+++ b/client/src/pages/ForgotPassword/ForgotPassword.scss
@@ -45,6 +45,7 @@
     }
 
     &-input {
+        font-size: 1.6rem;
         padding: 0.75rem;
     }
 
