--- a/client/src/pages/Register/Register.scss
+++ b/client/src/pages/Register/Register.scss
@@ -40,6 +40,7 @@
     }
 
     &-input {
+        font-size: 1.6rem;
         padding: 0.75rem;
     }
 
